force-app/main/default/objects/SVMXC__Config_Change_Detail__c/SVMXC__Config_Change_Detail__c.object-meta.xml
<CustomObject>
    <description>Capture config changes made by application for audit trail</description>
    <label>View ServiceMax Configuration Change</label>
    <nameField>
        <displayFormat>{000000}</displayFormat>
        <label>Record Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>View ServiceMax Configuration Changes</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>