force-app/main/default/objects/SVMXC__Config_Change_Detail__c/fields/SVMXC__Action__c.field-meta.xml
<CustomField>
    <fullName>SVMXC__Action__c</fullName>
    <description>Capture the details about what changes are made to ServiceMax Configuration</description>
    <label>Action</label>
    <type>TextArea</type>
</CustomField>