force-app/main/default/objects/SVMXC__Config_Change_Detail__c/fields/SVMXC__SM_New_Value__c.field-meta.xml
<CustomField>
    <fullName>SVMXC__SM_New_Value__c</fullName>
    <description>This field is used to store the new value.</description>
    <inlineHelpText>This field is used to store the new value.</inlineHelpText>
    <label>New_Value</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>