force-app/main/default/objects/SVMXC__Config_Change_Detail__c/listViews/SVMXC__All.listView-meta.xml
<ListView>
    <fullName>SVMXC__All</fullName>
    <columns>NAME</columns>
    <columns>SVMXC__Date__c</columns>
    <columns>SVMXC__User__c</columns>
    <columns>SVMXC__Action__c</columns>
    <columns>SVMXC__Application__c</columns>
    <filterScope>Everything</filterScope>
    <label>ServiceMax Configurations Trail</label>
    <language>en_US</language>
</ListView>